--- a/.github/workflows/release_testing.yml.in
+++ b/.github/workflows/release_testing.yml.in
@@ -157,10 +157,10 @@ jobs:
         with:
           tag_name: test-tag 
           files: |
-            /home/runner/work/hpcflow-new/hpcflow-new/release-artifacts/{{ executable_name }}-release-test-build-win.exe
-            /home/runner/work/hpcflow-new/hpcflow-new/release-artifacts/{{ executable_name }}-release-test-build-macOS
-            /home/runner/work/hpcflow-new/hpcflow-new/release-artifacts/{{ executable_name }}-release-test-build-linux
-            /home/runner/work/hpcflow-new/hpcflow-new/release-artifacts/{{ executable_name }}-release-test-build-win-dir
-            /home/runner/work/hpcflow-new/hpcflow-new/release-artifacts/{{ executable_name }}-release-test-build-macOS-dir
-            /home/runner/work/hpcflow-new/hpcflow-new/release-artifacts/{{ executable_name }}-release-test-build-linux-dir
+            ./release-artifacts/{{ executable_name }}-release-test-build-win.exe
+            ./release-artifacts/{{ executable_name }}-release-test-build-macOS
+            ./release-artifacts/{{ executable_name }}-release-test-build-linux
+            ./release-artifacts/{{ executable_name }}-release-test-build-win-dir
+            ./release-artifacts/{{ executable_name }}-release-test-build-macOS-dir
+            ./release-artifacts/{{ executable_name }}-release-test-build-linux-dir
           prerelease: true 
